...
  Widget build(BuildContext context, WidgetRef ref) {
    final productsAsync = ref.watch(productsListProvider);

    return ScreenWidget(
      hasBottomNavigationBar: true,
      appBar: CustomAppBar(
        title: 'Fake Store',
        leftIcon: Icons.search,
        rightIcon: Icons.shopping_bag_outlined,
        rightIconOnPressed: () => context.pushNamed('cart'),
        leftIconOnPressed: () => context.pushNamed('search'),
        appBarColor: const Color.fromARGB(255, 235, 237, 237),
      ),
...
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                /// Producto destacado
                HomeCard(
                  productTitle: products[13].title ?? '',
                  description: 'Ahora el 25% de descuento',
                  buttonTitle: 'Comprar ahora',
                  buttonOnPressed:
                      () => context.pushNamed(
                        'product_detail',
                        pathParameters: {'id': products[13].id.toString()},
                      ),
                  imageUrl: products[13].image ?? '',
...
