...

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final catalogState = ref.watch(catalogRepositoryProvider);

    return Scaffold(
      appBar: AppBar(title: const Text('Categorías')),
      body: Column(
        children: [
          _buildCategories(catalogState, ref),
          Expanded(child: _buildProducts(catalogState)),
        ],
      ),
...
