...
import '../../features/products/data/models/cart_item.dart';
import '../errors/exceptions.dart';

class Utils {
  static String? validateInput(String? value) {
    if (value == null || value.isEmpty) {
      return 'Por favor ingrese un valor';
    }

    return null;
  }

  static String? validateEmail(String? value) {
...
