...
  Widget build(BuildContext context, WidgetRef ref) {
    final productsAsync = ref.watch(
      productDetailProvider(int.tryParse(productId) ?? 0),
    );

    return ScreenWidget(
      appBar: GenericAppBar(title: 'Detalle del producto'),
      body: productsAsync.when(
        loading: () => const Center(child: CircularProgressIndicator()),
        error: (error, stack) {
          if (error is Failure) {
            return Center(child: Text(error.message ?? ''));
          }
...
